# XLZ_SDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: API清单.md  开发指南.md  设计说明.md
examples/: basic_plugin.cpp  call_any_api.cpp
include/xlz/: api.hpp  app_info.hpp  constants.hpp  data_types.hpp  e_types.hpp  generated_api.hpp  message_tools.hpp  metadata.hpp  plugin_exports.hpp  text_code.hpp  utility.hpp  xlz.hpp
src/: api.cpp  api_convenience.cpp  app_info.cpp  generated_api.cpp  message_tools.cpp  metadata.cpp  text_code.cpp  utility.cpp
tools/: check_sdk_metadata.js  probe_appload.cpp
