cmake_minimum_required(VERSION 3.20)
project(XLZ_SDK LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(FetchContent)
FetchContent_Declare(nlohmann_json GIT_REPOSITORY https://github.com/nlohmann/json.git GIT_TAG v3.12.0)
FetchContent_MakeAvailable(nlohmann_json)
add_library(xlz_sdk STATIC src/api.cpp src/api_convenience.cpp src/app_info.cpp src/message_tools.cpp src/metadata.cpp src/generated_api.cpp src/text_code.cpp src/utility.cpp)
add_library(XLZ::SDK ALIAS xlz_sdk)
target_include_directories(xlz_sdk PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(xlz_sdk PUBLIC nlohmann_json::nlohmann_json)
if(MSVC)
  target_compile_options(xlz_sdk PUBLIC /utf-8)
endif()
add_library(xlz_basic_plugin SHARED examples/basic_plugin.cpp)
target_link_libraries(xlz_basic_plugin PRIVATE XLZ::SDK)
set_target_properties(xlz_basic_plugin PROPERTIES OUTPUT_NAME "xlz_basic_plugin")
if(MSVC)
  target_compile_options(xlz_basic_plugin PRIVATE /utf-8 /MT /O2)
endif()
